# oxidizer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  run.ps1  run_tests.ps1
.claude/: settings.local.json
DotnetApp/: DotnetApp.csproj  FFIMethods.cs  Program.cs
bindings-generator/: Cargo.toml  build.rs
bindings-generator/src/: Generated.cs
crates/oxidizer/: Cargo.toml
crates/oxidizer/src/: lib.rs
crates/oxidizer/tests/: macro_tests.rs
crates/oxidizer/tests/ui/: async_without_runtime.rs  async_without_runtime.stderr  non_ident_pattern_param.rs  non_ident_pattern_param.stderr  unknown_ffi_type_attr.rs  unknown_ffi_type_attr.stderr
crates/oxidizer_core/: Cargo.toml
crates/oxidizer_core/src/: impls.rs  lib.rs  registry.rs
crates/oxidizer_csgen/: Cargo.toml
crates/oxidizer_csgen/src/: builder.rs  ir.rs  lib.rs  renderer.rs
crates/oxidizer_macro/src/: lib.rs
crates/oxidizer_pygen/: Cargo.toml
crates/oxidizer_pygen/src/: builder.rs  ir.rs  lib.rs  renderer.rs
crates/oxidizer_utils/: Cargo.toml
crates/oxidizer_utils/src/: lib.rs
examples/: CLAUDE.md
examples/DotnetApp/: DotnetApp.csproj  DotnetApp.sln  Program.cs
examples/PythonApp/: main.py
examples/bindings-generator/: Cargo.toml  build.rs
examples/bindings-generator/src/: Generated.cs
examples/rust_lib/: Cargo.toml
examples/rust_lib/src/: init.rs  lib.rs
oxidize_core/: Cargo.toml
oxidize_core/src/: generator.rs  impls.rs  lib.rs  registry.rs
oxidize_generator/: Cargo.toml
oxidize_generator/src/: lib.rs
oxidize_macro/: Cargo.toml
oxidize_macro/src/: lib.rs
oxidizer_core/src/: impls.rs  lib.rs
oxidizer_csgen/: Cargo.toml
oxidizer_csgen/src/: lib.rs
oxidizer_macro/: Cargo.toml
oxidizer_macro/src/: lib.rs
rust_lib/: Cargo.toml
rust_lib/src/: heap_allocated.rs  init.rs  lib.rs
tests/e2e/bindings-generator/: Cargo.toml  build.rs
tests/e2e/bindings-generator/src/: main.rs
tests/e2e/dotnet/: BindingsTests.cs  DotnetTests.csproj
tests/e2e/python/: conftest.py  test_bindings.py
tests/e2e/rust_lib/: Cargo.toml
tests/e2e/rust_lib/src/: init.rs
xtask/src/: main.rs
