[workspace]
members = [
    # Core crates
    "crates/oxidizer_core",
    "crates/oxidizer_macro",
    "crates/oxidizer_utils",
    "crates/oxidizer_csgen",
    "crates/oxidizer_pygen",
    "crates/oxidizer",

    # E2E test crates
    "tests/e2e/rust_lib",
    "tests/e2e/bindings-generator"
]

default-members = [
    "crates/oxidizer_core",
    "crates/oxidizer_macro",
    "crates/oxidizer_utils",
    "crates/oxidizer_csgen",
    "crates/oxidizer_pygen",
    "crates/oxidizer",
]

# Optional: specify resolver version (recommended for newer projects)
resolver = "2"

# Optional: workspace-wide dependencies that can be shared
[workspace.dependencies]
# Add common dependencies here if needed
derive-getters = "0.5.0"
derive-new = "0.7.0"
